changes in yaml sample spec

--- a/modules/kafka_user/external/0.1/facets.yaml
+++ b/modules/kafka_user/external/0.1/facets.yaml
@@ -1,5 +1,5 @@
 intent: kafka_user
-flavor: kafka_user-test
+flavor: external
 version: '0.1'
 description: Adds kafka_user - default flavor
 clouds:
@@ -21,11 +21,9 @@ spec:
       description: This is the Kafka password that is used to connect kafka instances
 sample:
   kind: kafka_user
-  flavor: kafka_user-test
+  flavor: external
   version: '0.1'
   disabled: false
   metadata: {}
   out: {}
-  spec:
-    username: ""
-    password: ""
+  spec: {}
