changes in facets.yaml added x-ui-typeable and secret-ref

--- a/modules/kafka_user/external/0.1/facets.yaml
+++ b/modules/kafka_user/external/0.1/facets.yaml
@@ -19,6 +19,8 @@ spec:
       type: string
       title: Password
       description: This is the Kafka password that is used to connect kafka instances
+      x-ui-secret-ref: true
+      x-ui-typeable: true
 sample:
   kind: kafka_user
   flavor: external
