--- a/modules/postgres/rds/0.2/facets.yaml
+++ b/modules/postgres/rds/0.2/facets.yaml
@@ -219,6 +219,9 @@ spec:
   required:
   - size
   - postgres_version
+  - snapshot_identifier
+  - snapshot_password
+  - snapshot_username
   x-ui-order:
   - postgres_version
   - size
