--- a/modules/aws_eventbridge/default/0.1/facets.yaml
+++ b/modules/aws_eventbridge/default/0.1/facets.yaml
@@ -56,6 +56,8 @@ spec:
               type: array
               title: Targets
               description: The targets to invoke when the rule is triggered
+              x-ui-array-input-validation:
+                error: "Invalid target. Please enter a valid target."
               items:
                 type: string
               x-ui-override-disable: true
