--- a/modules/postgres/aurora/0.1/facets.yaml
+++ b/modules/postgres/aurora/0.1/facets.yaml
@@ -180,9 +180,9 @@ spec:
       type: array
       title: Additional Database Names
       description: List of additional databases to be created
-      pattern: "^(?!.*[_-]{2,})[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*(, [a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*)*$|^(?!.*[_-]{2,})[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*(,[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*)*$|^(?!.*[_-]{2,})[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*(,
-        [a-zA-Z0-9]+([-_][a-zA-Z0-9])+)*$"
-      x-ui-error-message: "Database names must start with an alphanumeric character"
+      x-ui-array-input-validation:
+        pattern: "^(?!.*[_-]{2,})(?![_-])[a-zA-Z0-9]+([-_][a-zA-Z0-9]+)*$"
+        error: "Database names can only have alphanumeric, hyphens and underscores"
       items:
         type: string
       x-ui-override-disable: true
