--- a/modules/cloudfront/default/0.1/facets.yaml
+++ b/modules/cloudfront/default/0.1/facets.yaml
@@ -91,6 +91,8 @@ spec:
                       title: Cookies
                       description: Contains a list of cookie names
                       x-ui-placeholder: "Enter the cookie name"
+                      x-ui-array-input-validation:
+                        error: "Invalid cookie name. Please enter a valid cookie name."
                       items:
                         type: string
                       x-ui-override-disable: true
@@ -111,6 +113,8 @@ spec:
                     headers:
                       type: array
                       title: Headers
+                      x-ui-array-input-validation:
+                        error: "Invalid header name. Please enter a valid header name."
                       items:
                         type: string
                       x-ui-override-disable: true
@@ -138,6 +142,8 @@ spec:
                       title: Query Strings
                       description: Contains a list of query string names
                       x-ui-placeholder: "Enter the header name"
+                      x-ui-array-input-validation:
+                        error: "Invalid query string name. Please enter a valid query string name."
                       items:
                         type: string
                       x-ui-override-disable: true
@@ -173,6 +179,8 @@ spec:
           description: Controls which HTTP methods CloudFront processes and forwards
             to your Amazon S3 bucket or your custom origin
           x-ui-placeholder: Enter the allowed methods eg. GET, HEAD, OPTIONS
+          x-ui-array-input-validation:
+            error: "Invalid allowed method. Please enter a valid allowed method."
           items:
             type: string
           x-ui-override-disable: true
@@ -182,6 +190,8 @@ spec:
           description: Controls whether CloudFront caches the response to requests
             using the specified HTTP methods
           x-ui-placeholder: Enter the cached methods eg. GET, HEAD
+          x-ui-array-input-validation:
+            error: "Invalid cached method. Please enter a valid cached method."
           items:
             type: string
           x-ui-override-disable: true
@@ -236,6 +246,8 @@ spec:
               description: Controls which HTTP methods CloudFront processes and forwards
                 to your Amazon S3 bucket or your custom origin
               x-ui-placeholder: Enter allowed methods eg. GET, POST, PUT
+              x-ui-array-input-validation:
+                error: "Invalid allowed method. Please enter a valid allowed method."
               items:
                 type: string
               x-ui-override-disable: true
@@ -245,6 +257,8 @@ spec:
               description: Controls whether CloudFront caches the response to requests
                 using the specified HTTP methods
               x-ui-placeholder: Enter cached methods eg. GET, HEADS
+              x-ui-array-input-validation:
+                error: "Invalid cached method. Please enter a valid cached method."
               items:
                 type: string
               x-ui-override-disable: true
