--- a/modules/aws_dlm_lifecycle_policy/default/0.1/facets.yaml
+++ b/modules/aws_dlm_lifecycle_policy/default/0.1/facets.yaml
@@ -12,7 +12,7 @@ spec:
       title: DLM Schedules
       description: Configuration for DLM policy schedules
       patternProperties:
-        "^[a-zA-Z0-9_-]+$":
+        ^[a-zA-Z0-9_-]+$:
           type: object
           properties:
             copy_tags:
@@ -34,22 +34,26 @@ spec:
                   type: string
                   title: Interval Unit
                   description: Unit for the interval
-                  enum: ["HOURS", "DAYS"]
+                  enum:
+                  - HOURS
+                  - DAYS
                 times:
                   type: array
                   title: Times
                   description: Times of day to create snapshots (HH:MM format)
                   x-ui-override-disable: true
-                  x-ui-array-input-validation:
-                    pattern: "^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$"
-                    error: "Invalid time. Please enter a valid time in HH:MM format."
+                  x-ui-array-input-validation:                     
+                    pattern: ^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$                     
+                    error: Invalid time format. Please use HH:MM format.
                   items:
                     type: string
                 cron_expression:
                   type: string
                   title: Cron Expression
                   description: Cron expression for complex scheduling
-                  pattern: "^cron\\(.*\\)$"
+                  pattern: ^cron\(.*\)$
+                  x-ui-error-message: Invalid cron expression. Please use cron(minute
+                    hour day-of-month month day-of-week) format.
               required: []
             retain_rule:
               type: object
@@ -70,14 +74,18 @@ spec:
                   type: string
                   title: Interval Unit
                   description: Unit for retention interval
-                  enum: ["DAYS", "WEEKS", "MONTHS", "YEARS"]
+                  enum:
+                  - DAYS
+                  - WEEKS
+                  - MONTHS
+                  - YEARS
               required: []
             cross_region_copy_rules:
               type: object
               title: Cross Region Copy Rules
               description: Rules for copying snapshots to other regions
               patternProperties:
-                "^[a-zA-Z0-9_-]+$":
+                ^[a-zA-Z0-9_-]+$:
                   type: object
                   properties:
                     target:
@@ -108,23 +116,35 @@ spec:
                           type: string
                           title: Interval Unit
                           description: Unit for retention interval
-                          enum: ["DAYS", "WEEKS", "MONTHS", "YEARS"]
-                      required: ["interval", "interval_unit"]
-                  required: ["target", "retain_rule"]
+                          enum:
+                          - DAYS
+                          - WEEKS
+                          - MONTHS
+                          - YEARS
+                      required:
+                      - interval
+                      - interval_unit
+                  required:
+                  - target
+                  - retain_rule
             tags_to_add:
               type: object
               title: Tags to Add
               description: Additional tags to apply to snapshots
               x-ui-yaml-editor: true
-          required: ["copy_tags", "create_rule", "retain_rule", "tags_to_add"]
+          required:
+          - copy_tags
+          - create_rule
+          - retain_rule
+          - tags_to_add
     target_tags:
       type: object
       title: Target Tags
       description: Tags used to identify volumes for snapshot policy
       x-ui-yaml-editor: true
   required:
-    - schedules
-    - target_tags
+  - schedules
+  - target_tags
 sample:
   kind: aws_dlm_lifecycle_policy
   flavor: default
