--- a/modules/kubernetes_cluster/gcp_gke/0.1/facets.yaml
+++ b/modules/kubernetes_cluster/gcp_gke/0.1/facets.yaml
@@ -82,6 +82,8 @@ spec:
           title: Kubernetes Master Authorized Networks
           description: Authorized networks for kubernetes master
           type: array
+          x-ui-array-input-validation:
+            error: "Invalid authorized network. Please enter a valid authorized network."
           items:
             type: string
           x-ui-overrides-only: true
@@ -105,6 +107,8 @@ spec:
               title: Instance Types
               description: List of instance types for worker nodes
               type: array
+              x-ui-array-input-validation:
+                error: "Invalid instance type. Please enter a valid instance type."
               items:
                 type: string
               minItems: 1
@@ -212,6 +216,8 @@ spec:
               title: Instance Types
               description: List of instance types for worker nodes
               type: array
+              x-ui-array-input-validation:
+                error: "Invalid instance type. Please enter a valid instance type."
               default: ["n2-standard-4"]
               minItems: 1
               x-ui-overrides-only: true
