--- a/modules/kubernetes_cluster/aws_eks/0.2/facets.yaml
+++ b/modules/kubernetes_cluster/aws_eks/0.2/facets.yaml
@@ -111,6 +111,8 @@ spec:
               type: array
               x-ui-placeholder: e.g. m4.xlarge t3.2xlarge
               x-ui-overrides-only: true
+              x-ui-array-input-validation:
+                error: "Invalid instance type. Please enter a valid instance type."
               items:
                 type: string
             root_disk_volume:
