--- a/modules/service/deployment/0.1/facets.yaml
+++ b/modules/service/deployment/0.1/facets.yaml
@@ -191,6 +191,8 @@ spec:
                       type: array
                       title: Command
                       description: Command to run in the container.
+                      x-ui-array-input-validation:
+                        error: "Invalid command. Please enter a valid command."
                       items:
                         type: string
                       x-ui-command: true
@@ -211,6 +213,8 @@ spec:
                       type: array
                       title: Command
                       description: Command to run in the container.
+                      x-ui-array-input-validation:
+                        error: "Invalid command. Please enter a valid command."
                       items:
                         type: string
                       x-ui-command: true
@@ -223,6 +227,8 @@ spec:
           type: array
           title: Command
           description: Command to run in the container
+          x-ui-array-input-validation:
+            error: "Invalid command. Please enter a valid command."
           items:
             type: string
           x-ui-command: true
@@ -231,6 +237,10 @@ spec:
           type: array
           title: Arguments
           description: Arguments to pass to the command
+          x-ui-array-input-validation:
+            pattern: '^[a-zA-Z0-9-_ ]+$'
+            error: "Each argument can only contain alphanumeric characters,
+            dashes, underscores, and spaces."
           items:
             type: string
           x-ui-command: true
@@ -317,6 +327,8 @@ spec:
             readiness_exec_command:
               type: array
               title: Readiness Exec Command
+              x-ui-array-input-validation:
+                error: "Invalid command. Please enter a valid command."
               x-ui-placeholder:  "Add each command argument as a new entry"
               x-ui-error-message: "Enter each command/argument in a separate line"
               x-ui-visible-if:
@@ -398,6 +410,8 @@ spec:
             liveness_exec_command:
               type: array
               title: Liveness Exec Command
+              x-ui-array-input-validation:
+                error: "Invalid command. Please enter a valid command."
               x-ui-placeholder: "Add each command argument as a new entry" 
               x-ui-error-message: "Enter each command/argument in a separate line"
               x-ui-visible-if:
@@ -487,6 +501,8 @@ spec:
             startup_exec_command:
               type: array
               title: Startup Exec Command
+              x-ui-array-input-validation:
+                error: "Invalid command. Please enter a valid command."
               x-ui-placeholder: "Add each command argument as a new entry"
               x-ui-error-message: "Enter each command/argument in a separate line"
               x-ui-visible-if:
@@ -1016,6 +1032,8 @@ spec:
                   type: array
                   title: Command
                   description: Command to run in the container
+                  x-ui-array-input-validation:
+                    error: "Invalid command. Please enter a valid command."
                   items:
                     type: string
                   x-ui-command: true
@@ -1024,6 +1042,10 @@ spec:
                   type: array
                   title: Arguments
                   description: Arguments to pass to the command
+                  x-ui-array-input-validation:
+                    pattern: '^[a-zA-Z0-9-_ ]+$'
+                    error: "Each argument can only contain alphanumeric characters,
+                    dashes, underscores, and spaces."
                   items:
                     type: string
                   x-ui-command: true
@@ -1280,6 +1302,8 @@ spec:
                   type: array
                   title: Command
                   description: Command to run in the container
+                  x-ui-array-input-validation:
+                    error: "Invalid command. Please enter a valid command."
                   items:
                     type: string
                   x-ui-command: true
@@ -1288,6 +1312,10 @@ spec:
                   type: array
                   title: Arguments
                   description: Arguments to pass to the command
+                  x-ui-array-input-validation:
+                    pattern: '^[a-zA-Z0-9-_ ]+$'
+                    error: "Each argument can only contain alphanumeric characters,
+                    dashes, underscores, and spaces."
                   items:
                     type: string
                   x-ui-command: true
@@ -1571,6 +1599,8 @@ spec:
                     readiness_exec_command:
                       type: array
                       title: Readiness Exec Command
+                      x-ui-array-input-validation:
+                        error: "Invalid command. Please enter a valid command."
                       x-ui-placeholder: "Add each command argument as a new entry"
                       x-ui-error-message: "Enter each command/argument in a separate line"
                       x-ui-visible-if:
@@ -1640,6 +1670,8 @@ spec:
                     liveness_exec_command:
                       type: array
                       title: Liveness Exec Command
+                      x-ui-array-input-validation:
+                        error: "Invalid command. Please enter a valid command."
                       x-ui-placeholder: "Add each command argument as a new entry"
                       x-ui-error-message: "Enter each command/argument in a separate line"
                       x-ui-visible-if:
@@ -1709,6 +1741,8 @@ spec:
                     startup_exec_command:
                       type: array
                       title: Startup Exec Command
+                      x-ui-array-input-validation:
+                        error: "Invalid command. Please enter a valid command."
                       x-ui-placeholder: "Add each command argument as a new entry"
                       x-ui-error-message: "Enter each command/argument in a separate line"
                       x-ui-visible-if:
