--- a/modules/postgres_user/default/0.3/facets.yaml
+++ b/modules/postgres_user/default/0.3/facets.yaml
@@ -124,6 +124,8 @@ spec:
                   type: array
                   title: Statements
                   description: List of grant statements to be executed
+                  x-ui-array-input-validation:
+                    error: "Invalid grant statement. Please enter a valid grant statement."
                   items:
                     type: string
                   minItems: 1
