--- a/modules/service/statefulset/0.1/facets.yaml
+++ b/modules/service/statefulset/0.1/facets.yaml
@@ -187,6 +187,8 @@ spec:
           type: array
           title: Command
           description: Command to run in the container
+          x-ui-array-input-validation:
+            error: "Invalid command. Please enter a valid command."
           items:
             type: string
           x-ui-command: true
@@ -195,6 +197,9 @@ spec:
           type: array
           title: Arguments
           description: Arguments to pass to the command
+          x-ui-array-input-validation:
+            pattern: '^[a-zA-Z0-9-_ ]+$'
+            error: "Each argument can only contain alphanumeric characters, dashes, underscores, and spaces."
           items:
             type: string
           x-ui-command: true
@@ -293,6 +298,8 @@ spec:
             readiness_exec_command:
               type: array
               title: Readiness Exec Command
+              x-ui-array-input-validation:
+                error: "Invalid command. Please enter a valid command."
               x-ui-placeholder: "Add each command argument as a new entry"
               x-ui-error-message: "Enter each command/argument in a separate line"
               x-ui-visible-if:
@@ -389,6 +396,8 @@ spec:
             liveness_exec_command:
               type: array
               title: Liveness Exec Command
+              x-ui-array-input-validation:
+                error: "Invalid command. Please enter a valid command."
               x-ui-placeholder: "Add each command argument as a new entry"
               x-ui-error-message: "Enter each command/argument in a separate line"
               x-ui-visible-if:
@@ -494,6 +503,8 @@ spec:
             startup_exec_command:
               type: array
               title: Startup Exec Command
+              x-ui-array-input-validation:
+                error: "Invalid command. Please enter a valid command."
               x-ui-placeholder: "Add each command argument as a new entry"
               x-ui-error-message: "Enter each command/argument in a separate line"
               x-ui-visible-if:
@@ -1019,6 +1030,8 @@ spec:
                   type: array
                   title: Command
                   description: Command to run in the container
+                  x-ui-array-input-validation:
+                    error: "Invalid command. Please enter a valid command."
                   items:
                     type: string
                   x-ui-command: true
@@ -1027,6 +1040,9 @@ spec:
                   type: array
                   title: Arguments
                   description: Arguments to pass to the command
+                  x-ui-array-input-validation:
+                    pattern: '^[a-zA-Z0-9-_ ]+$'
+                    error: "Each argument can only contain alphanumeric characters, dashes, underscores, and spaces."
                   items:
                     type: string
                   x-ui-command: true
@@ -1281,6 +1297,8 @@ spec:
                   type: array
                   title: Command
                   description: Command to run in the container
+                  x-ui-array-input-validation:
+                    error: "Invalid command. Please enter a valid command."
                   items:
                     type: string
                   x-ui-command: true
@@ -1289,6 +1307,10 @@ spec:
                   type: array
                   title: Arguments
                   description: Arguments to pass to the command
+                  x-ui-array-input-validation:
+                    pattern: '^[a-zA-Z0-9-_ ]+$'
+                    error: "Each argument can only contain alphanumeric characters,
+                    dashes, underscores, and spaces."
                   items:
                     type: string
                   x-ui-command: true
@@ -1582,6 +1604,8 @@ spec:
                     readiness_exec_command:
                       type: array
                       title: Readiness Exec Command
+                      x-ui-array-input-validation:
+                        error: "Invalid command. Please enter a valid command."
                       x-ui-placeholder: "Add each command argument as a new entry"
                       x-ui-error-message: "Enter each command/argument in a separate line"
                       x-ui-visible-if:
@@ -1664,6 +1688,8 @@ spec:
                     liveness_exec_command:
                       type: array
                       title: Liveness Exec Command
+                      x-ui-array-input-validation:
+                        error: "Invalid command. Please enter a valid command."
                       x-ui-placeholder: "Add each command argument as a new entry"
                       x-ui-error-message: "Enter each command/argument in a separate line"
                       x-ui-visible-if:
@@ -1746,6 +1772,8 @@ spec:
                     startup_exec_command:
                       type: array
                       title: Startup Exec Command
+                      x-ui-array-input-validation:
+                        error: "Invalid command. Please enter a valid command."
                       x-ui-placeholder: "Add each command argument as a new entry"
                       x-ui-error-message: "Enter each command/argument in a separate line"
                       x-ui-visible-if:
